Fixed the border that was bleeding

--- a/style.css
+++ b/style.css
@@ -7,9 +7,8 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
-  /* box-sizing: border-box; */
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;
+  height: 100vh; */
 }
 
 .box {
@@ -60,9 +59,12 @@ p {
 }
 
 figure {
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
   width: 160px;
   height: 160px;
-  margin: 5px;
   overflow: hidden;
   border-radius: 4px;
 }
